wp-content/themes/delivering-happiness/assets/sass/global/_header.scss
//
// Header
// --------------------------------------------------

.global-header {
    @include clearfix;
    font-size: 13px;
    padding-bottom: 10px;
    &.sticky {
        width: 100%;
        position: fixed;
        background: $White;
        z-index: 9999;
    }
    .wrapper {
        padding: 10px 0 0 0;
        position: relative;
    }
    // Brand Logo
    .logo {
        @extend %pull-left;
        a {
            @include size(128px, 61px);
            @include bg-img(logo, png);
            display: block;
            background-size: 100%;
        }
    }
    // Main Navigation
    .site-navigation {
        @extend %pull-left;
        list-style-type: none;
        padding: 20px 0 0 0;
        li {
            @extend %pull-left;
            @include transition(all 0.5s ease);
            border-bottom: 6px solid $White;
            //margin-left: 84px;
            .message {
                @extend %text-center;
                @include transition(all 0.5s ease);
                @include size(100%, 35px);
                color: $White;
                position: absolute;
                left: 0px;
                top: 80px;
                font-size: 18px;
                height: 0px;
                overflow: hidden;
                line-height: 1.9;
                z-index: 999;
            }
            &:hover {
                .message {
                    height: 35px;
                }
            }
            a {
                color: lighten($Black, 50%);
                font-size: 13px;
                border-bottom: 5px solid $White;
                letter-spacing: 1px;
                padding: 5px 0 10px 39px;
                display: block;
            }
            &.nav-work {
                margin-left: 100px;
                .message {
                    background: $Purple;
                }
                &.active,
                &:hover {
                    border-bottom-color: $Purple;
                }
            }
            &.nav-shop {
                 margin-left: 40px;
                .message {
                    background: $Green;
                }
                a {
                    padding-left: 34px;
                }
                &.active,
                &:hover {
                    border-bottom-color: $Green;
                }
            }
            &.nav-community {
                margin-left: 43px;
                .message {
                    background: $Orange;
                }
                
                a {
                    padding-left: 29px;
                }
                &.active,
                &:hover {
                    border-bottom-color: $Orange;
                }
            }
            &.nav-happiness {
                margin-left: 48px;
                .message {
                    background: $Yellow;
                }
                a {
                    padding-left: 33px;
                }
                &.active,
                &:hover {
                    border-bottom-color: $Yellow;
                }
            }
        }
    }
    .gtranslate {
        float: right;
    }
    //Search section
    .searchfrm {
        width: 180px;
        margin: 14px 0 0 55px;
        @extend %pull-right;
        .search-form {
                border: 2px solid $bdr-color1;
                margin: 0px 0 0 0;
                @include size(180px, 38px);
                span {
                    display: none;
                }
                label {
                    @extend %pull-left;
                    margin-left: 5px;
                }
                .search-field {
                    border: 0 none;
                    //font-weight: bold;
                    color: $text-color2;
                    
                    font-size: 12px; 
                    line-height: 12px;
                    font-style: italic;
                     padding-top: 5px;
                    @extend %museo_slab;
                    @include size(125px, 32px);
                    &:focus {
                        border: 0 none;
                        outline: 0 none;
                    }
                }
                .search-submit {
                    text-indent: 9999px;
                    border: 0 none;
                    background-color: transparent;
                    cursor: pointer;
                    padding: 0;
                    border: 0 none !important;
                    outline: 0 none !important;
                    @extend %pull-left;
                    @include bg-img-only(nerdywinkey, png, no-repeat, center, center);
                    @include size(44px, 38px);
                }
            }

    }
     
}

